# dagster-project-example

./: Dockerfile  docker-compose.yaml  pyproject.toml
dagster_example/: __init__.py  __main__.py  jobs.py  lifetime.py  reporting.py  repositories.py  sensors.py  version.py
dagster_example/ops/: cereal.py
