[project]
name = "dagster_example"
authors = [
  {name = "Anton Friberg"},
  {name = "Emir Karamehmetoglu", email = "emirkmo@github.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache License"]
dynamic = ["version"]
description = "Dagster example project"
requires-python = '>=3.10'
dependencies = [
    "dagster",
    "dagster-postgres",
    "dagster-prometheus",
    "dagit",
    "prometheus-client",
    "pandas",
    "requests"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy",
  "flake8",
  "requests-mock"
  ]

[tool.black]
line-length = 99
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
atomic = true
line_length = 99
indent = '    '
multi_line_output = 3
include_trailing_comma = true
known_third_party = [
  "dagster",
  "pytest",
]

[tool.pylint.message_control]
# wrong-import-order disabled due to conflict with isort v5
disable="""
    duplicate-code,
    wrong-import-order
    """
